@@ -10,6 +10,7 @@
 	+ Bugfix: cast sql types to filter fields in logs
 	+ Bugfix: Restricted resources are back again to make RSS
 	access policy work again
+	+ Workaround bogus mason warnings
 0.11.103
 	+ Modify EBox::Types::HasMany to create directory based on its row 
 	+ Add _setRelationship method to set up relationships between models
